--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ input[type="submit"]:hover {
         padding: 20px;
     }
     .todoContainer {
+        height: auto 300px;
         margin-top: 20px;
     }
     .circle{
